fixed move list overflow

--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: .25rem .5rem ;
+    overflow: auto;
 }
 
 .move-span {
